# Baggers

./: .gitignore  DESIGN.md  IMPLEMENTATION.md  README.md  database.db  main.py  pyproject.toml  requirements.txt
baggers/: crud.py  database.py  main.py  models.py  router.py  schemas.py
tests/: conftest.py  test_api.py  test_crud.py
